--- a/padaria.html
+++ b/padaria.html
@@ -190,7 +190,11 @@
                     <img src="img/beirute.png" alt="beirute" loading="lazy" width="200px">
                     <h4>Beirute</h4>
                 </div>
+
+               
             </div>
+
+            <a href="produtos.html">Ver tudo</a>
 
 
 
