--- a/padaria.html
+++ b/padaria.html
@@ -7,7 +7,9 @@
     <title>padaria</title>
     <link rel="stylesheet" href="padaria.css">
     <link rel="shortcut icon" href="" type="image/x-icon">
+    <script src="https://unpkg.com/scrollreveal"></script>
     <script src="https://kit.fontawesome.com/484c3cfbae.js" crossorigin="anonymous"></script>
+    <script src="padaria.js" defer></script>
 </head>
 
 <body>
@@ -280,7 +282,7 @@
 
   </footer>
   
-  <script src="script.js"></script>
+ 
 </body>
 
 
